welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:17: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:20: error: expected start of definition
	override def forward()  {
                 ^ZigZag:23: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:26: error: expected start of definition
	override def backward() {
                 ^ZigZag:29: error: Unmatched closing brace '}' ignored here
}
^